# EqCustomPlot

./: CMakeLists.txt  README.md  README_zh-CN.md  eq.cpp  eq.h  eqcustomplot.cpp  eqcustomplot.h  mainwindow.cpp  qcpaxistickerfreq.cpp  qcpaxistickerfreq.h  qcustomplot.cpp  resources.qrc
tests/: eq_math_test.cpp
